# data-metrics-aws

./: Dockerfile  LICENSE  README.md  app.py  mf_config.json  poetry.toml  pyproject.toml  read_config.py
.github/workflows/: aws_lamba_deploy.yaml  mf_glue_setup.yaml
.github/workflows/aws_templates/: mf_glue_setup.yaml
aws_templates/: athena_data_catalog.yaml  athena_workgroup.yaml  glue_setup.yaml
data_metric_mf_aws/: get_mf.py
data_metric_mf_aws/config/: mf_config.json
data_metric_mf_aws/utils/: logger.py  read_config.py
mf_aws/: Dockerfile  app.py  pyproject.toml  read_config.py
mf_aws/config/: mf_config.json
mf_aws/utils/: read_config.py
