[tool.poetry]
name = "data-metrics-mf-aws"
version = "0.1.0"
description = ""
authors = ["AADARSH GAIKWAD <aadarshgaikwad96@gmail.com>"]
license = "MIT"
packages = [
    { include = "data_metric_mf_aws" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
flake8-pytest-style = "^1.6"
nitpick = "^0.31"
safety = "^1.10"
pytest = "^7.0"
pytest-cov = "^3.0"
pytest-randomly = "^3.11"
sphinx = "^4.4"
sphinx-autodoc-typehints = "^1.17"
doc8 = "^0.10"
m2r2 = "^0.3"
tomlkit = "^0.10"
pre-commit = "^2.17.0"
autopep8 = "1.5.0"
types-requests = "^2.27.11"

[tool.black]
line-length = 120

[tool.poetry.extras]
lint = [ "pylint",]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"